AIML-237: Phase 3 Code Quality Optimizations [STACKED] (#33)
* Update CLAUDE.md with ultra-concise comprehensive coding standards

- Add meta-rule: Maximum conciseness to minimize token usage
- Expand Java style standards (guard clauses, .toList(), imports)
- Add String validation standards (StringUtils.hasText, isBlank)
- Expand Lombok standards (@Data for mutable POJOs, @Slf4j, @RequiredArgsConstructor)
- Add logging standards (SLF4J fluent API, markers, log levels)
- Add null handling standards (Optional, never null collections)
- Expand testing standards (mock() syntax, AssertJ, naming convention)
- Add Javadoc guidelines (minimal, self-documenting code)

Estimated impact when applied: ~1,870+ lines of boilerplate reduction

Related: AIML-237, mcp-ylk

* Add Lombok @Data to SDK data classes (mcp-857)

* Apply Lombok logging annotations (mcp-1jp)

* Use Stream.toList API (mcp-9zw)

* Use StringUtils.hasText for string validation (mcp-22h)

* Simplify collection emptiness guards (mcp-d16)

* Add logging compliance test (mcp-1jp)

* Add toList regression test (mcp-9zw)

* Add StringUtils compliance test (mcp-22h)

* Add collection guard regressions (mcp-d16)

* Finish StringUtils guard updates (mcp-d16)

* Add AI model labeling process to CLAUDE.md

- Document requirement to label beads with codex-cli and model-gpt-5-codex
- Explain when to apply labels (when codex works on beads)
- Add rationale for tracking (task analysis, effectiveness, cost optimization)
- Position in Beads Workflow section after status management

* Keep LibraryExtended JSON property names stable (mcp-j2m)

- Add @JsonProperty annotations to preserve legacy JSON property names
- Add manual getters for filename vs fileName backwards compatibility
- Add test to verify JSON serialization maintains expected property names

Fixes P0 bug to maintain API stability for existing MCP clients.

* Extract dependency versions to POM properties (mcp-0bt)

- Add properties for all hardcoded dependency versio